rust/tests/snapshots/help/apps__delete.snap
---
source: tests/cli/snapshots.rs
---
Delete an app connection (soft delete)

Usage: vendo apps delete [OPTIONS] <appId>

Arguments:
  <appId>  

Options:
      --json            Output raw JSON
      --profile <name>  Use a specific account profile
      --debug           Enable verbose request diagnostics
  -y, --yes             Skip confirmation prompt
      --dry-run         Preview the action without executing
      --output <field>  Print a single field (e.g. id)
  -h, --help            Print help

Examples:
  $ vendo apps delete <appId>
  $ vendo apps delete <appId> --yes
  $ vendo apps delete <appId> --dry-run
