rust/tests/snapshots/help/apps__diagnose.snap
---
source: tests/cli/snapshots.rs
---
Show app connections that need attention

Usage: vendo apps diagnose [OPTIONS]

Options:
      --json            Output raw JSON
      --profile <name>  Use a specific account profile
      --debug           Enable verbose request diagnostics
  -h, --help            Print help

Examples:
  $ vendo apps diagnose
  $ vendo apps diagnose --json
