rust/tests/snapshots/help/apps__list.snap
---
source: tests/cli/snapshots.rs
---
List all app connections

Usage: vendo apps list [OPTIONS]

Options:
      --profile <name>  Use a specific account profile
      --state <state>   Filter by state (active, inactive)
      --debug           Enable verbose request diagnostics
      --type <type>     Filter by app type
      --role <role>     Filter by capability (source, destination) — derived from permissions
      --limit <n>       Number of results [default: 20]
      --offset <n>      Pagination offset [default: 0]
      --json            Output raw JSON
      --output <field>  Print a single field per row (e.g. id)
  -h, --help            Print help

Examples:
  $ vendo apps list
  $ vendo apps list --role source
  $ vendo apps list --output id
