rust/tests/snapshots/help/apps__resume.snap
---
source: tests/cli/snapshots.rs
---
Resume a paused app connection

Usage: vendo apps resume [OPTIONS] <appId>

Arguments:
  <appId>  

Options:
      --json            Output raw JSON
      --profile <name>  Use a specific account profile
      --debug           Enable verbose request diagnostics
      --dry-run         Preview the action without executing
      --output <field>  Print a single field (e.g. id)
  -h, --help            Print help

Examples:
  $ vendo apps resume <appId>
  $ vendo apps resume <appId> --dry-run
